# edu-ntnu-idatt2505-01

./: CMakeLists.txt  conanfile.txt
apps/: CMakeLists.txt  Run.cpp  Run2.cpp  Run3.cpp  tutorial_code.cpp
include/Example_library/: gl_coloured_cube.hpp  rubiks_cube.hpp  shader_loader.hpp
include/Example_library/rubiks_cube/: gl_rubics_cube_base_model.hpp  gl_rubiks_cube.hpp  rubiks_controller.hpp  rubiks_cube.hpp  rubiks_cubie.hpp  rubiks_rotation_anim_layer.hpp
scripts/: conan_build.bat
shaders/: rubiks.frag  rubiks.vert  shapes.vert
src/Example_library/: CMakeLists.txt  gl_coloured_cube.cpp  gl_coloured_cube_static_defs.cpp  rubiks_single_cube.cpp  shader_loader.cpp
src/Example_library/coloured_cube/: CMakeLists.txt  gl_coloured_cube.cpp  gl_coloured_cube_static_defs.cpp
src/Example_library/rubiks_cube/: CMakeLists.txt  gl_rubics_cube_base_model.cpp  gl_rubiks_cube.cpp  rubiks_controller.cpp  rubiks_cube.cpp  rubiks_cubie.cpp  rubiks_rotation_anim_layer.cpp
test/: CMakeLists.txt  rubiks_cube-T.cpp
